--- a/Homepage.css
+++ b/Homepage.css
@@ -62,12 +62,12 @@
 
 #postwindow{
     display: flex;
-    border:2px solid violet;
     justify-content:center;
+    background-image: url("./background.jpg");
+
 }
 
 #userinformation{
-    border:2px solid black;
     border-radius: 10px;
     height:90vh;
     margin-top: 0px;
@@ -93,7 +93,7 @@
 .postheadings{
     height:12vh;
     width:22vw;
-    margin-top: 20px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,26 +188,32 @@
     display: flex;
     align-items: center;
     padding-left: 30px;
-    animation: textcolor 5s infinite;
+    animation: textcolor 2s infinite;
 }
 
 @keyframes textcolor{
-    20%{color:color-mix(in srgb, red 50%, brown 50%)};
-    40%{color:antiquewhite};
-    60%{color:cadetblue};
-    80%{color:aliceblue};
-    100%{color:burlywood}
+    20%{color:blue};
+    40%{color:brown};
+    60%{color:blueviolet};
+    80%{color:chocolate};
+    100%{color:orange}
 }
 
 
 
 .ReadMore{
     font-size: 1.5rem;
+    background-color: rgb(199, 229, 245);
     border-radius: 10px;
+    border: none;
+    text-decoration: underline;
 }
 
 .read{
     height:10vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .postrecord{
@@ -236,4 +242,134 @@
 .likefont{
     font-size:1.3rem;
     margin-left: 1vw;
+}
+
+
+
+@media (min-width:1000px) and (max-width:1100px){
+    *{
+        font-size: 0.9rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 19vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+    
+}
+@media (min-width:900px) and (max-width:1000px){
+    *{
+        font-size: 0.8rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 17vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:800px) and (max-width:900px){
+    *{
+        font-size: 0.7rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 17vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:700px) and (max-width:800px){
+    *{
+        font-size: 0.7rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 15vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:600px) and (max-width:700px){
+    *{
+        font-size: 0.6rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 14vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:500px) and (max-width:600px){
+    *{
+        font-size: 0.6rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 12vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:400px) and (max-width:500px){
+    *{
+        font-size: 0.5rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 10vw;
+    }
+    .iconsize{
+        font-size: 1.5rem;
+    }
+}
+@media (min-width:300px) and (max-width:400px){
+    *{
+        font-size: 0.5rem;
+    }
+    .icons{
+        margin: 8px;
+    }
+    .search{
+        margin-right: 9vw;
+    }
+    .iconsize{
+        font-size: 1.5rem;
+    }
+}
+@media screen and (max-width:300px){
+    *{
+        font-size: 0.4rem;
+    }
+    .icons{
+        margin: 6px;
+    }
+    .search{
+        margin-right: 7vw;
+    }
+    .iconsize{
+        font-size: 1rem;
+    }
 }
