--- a/post.css
+++ b/post.css
@@ -62,18 +62,22 @@
 
 .post{
     height:140vh;
-    width:99vw;
+    width:98vw;
+    border: 5px solid brown;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-top: 10px;
+    background-image: url("./background.jpg");
 }
 .photopost{
     display:flex;
     justify-content: center;
     align-items: center;
     height:15vh;
-    width:100vw;
+    width:99vw;
+    margin-top:20px;
 }
 
 .photo{
@@ -87,13 +91,13 @@
 
 .postcontrol{
     height:15vh;
-    width:55vw;
+    width:65vw;
 }
 
 .postname{
     height: 8vh;
-    width:54vw;
-    font-size: 2rem;
+    width:64vw;
+    font-size: 2.5rem;
     display:flex;
     justify-content: center ;
     align-items: center;
@@ -107,16 +111,15 @@
 
 .postauthor{
     height:6vh;
-    width:54vw;
+    width:64vw;
     font-size:1.5rem;
     display: center;
     text-align: end;
-
 }
 
 .postcontent{
     height: 110vh;
-    width:98vw;
+    width:97vw;
     color:black;
     font-size:1.5rem;
     font-style: italic;
@@ -124,7 +127,25 @@
     display: flex;
     align-items: center;
     padding-left: 30px;
+    padding-right: 10px;
     animation: textcolor 5s infinite;
+}
+
+#post1{
+    height:110vh;
+    padding-top: 0px;
+    
+}
+#post2{
+    height:120vh;
+    padding-top: 0px;
+}
+#post3{
+    height:125vh;
+}
+
+#post4{
+    padding-top: 0px;
 }
 
 @keyframes textcolor{
@@ -137,7 +158,7 @@
 
 .postrecord{
     height:9vh;
-    width:100vw;
+    width:99vw;
     display:flex ;
     align-items: center;
 }
@@ -164,11 +185,152 @@
 }
 .ReadMore{
     font-size: 1.5rem;
+    background-color: rgb(199, 229, 245);
     border-radius: 10px;
+    border:none;
+    text-decoration: underline;
 }
 
 .read{
     height:10vh;
     display:flex;
     align-items: center;
+}
+
+
+@media (min-width:1100px) and (max-width:1200px){
+    *{
+        font-size:0.9rem;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+
+@media (min-width:1000px) and (max-width:1100px){
+    *{
+        font-size: 0.9rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 19vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+    
+}
+@media (min-width:900px) and (max-width:1000px){
+    *{
+        font-size: 0.8rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 17vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:800px) and (max-width:900px){
+    *{
+        font-size: 0.7rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 17vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:700px) and (max-width:800px){
+    *{
+        font-size: 0.7rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 15vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:600px) and (max-width:700px){
+    *{
+        font-size: 0.6rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 14vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:500px) and (max-width:600px){
+    *{
+        font-size: 0.6rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 12vw;
+    }
+    .iconsize{
+        font-size: 2rem;
+    }
+}
+@media (min-width:400px) and (max-width:500px){
+    *{
+        font-size: 0.5rem;
+    }
+    .icons{
+        margin: 10px;
+    }
+    .search{
+        margin-right: 10vw;
+    }
+    .iconsize{
+        font-size: 1.5rem;
+    }
+}
+@media (min-width:300px) and (max-width:400px){
+    *{
+        font-size: 0.5rem;
+    }
+    .icons{
+        margin: 8px;
+    }
+    .search{
+        margin-right: 9vw;
+    }
+    .iconsize{
+        font-size: 1.5rem;
+    }
+}
+@media screen and (max-width:300px){
+    *{
+        font-size: 0.4rem;
+    }
+    .icons{
+        margin: 6px;
+    }
+    .search{
+        margin-right: 7vw;
+    }
+    .iconsize{
+        font-size: 1rem;
+    }
 }
