--- a/Homepage.css
+++ b/Homepage.css
@@ -259,6 +259,12 @@
     .iconsize{
         font-size: 2rem;
     }
+    .postheadings{
+        font-size: 1rem;
+    }
+    .postheadings:hover{
+        font-size: 1.2rem;
+    }
     
 }
 @media (min-width:900px) and (max-width:1000px){
@@ -347,7 +353,7 @@
 }
 @media (min-width:300px) and (max-width:400px){
     *{
-        font-size: 0.5rem;
+        font-size: 0.4rem;
     }
     .icons{
         margin: 8px;
@@ -358,6 +364,10 @@
     .iconsize{
         font-size: 1.5rem;
     }
+    .postcontent{
+        padding-left: 1px;
+    }
+    
 }
 @media screen and (max-width:300px){
     *{
